--- a/modules/deployer/client/AddProject/AddProject.scss
+++ b/modules/deployer/client/AddProject/AddProject.scss
@@ -1,3 +1,12 @@
+.form-element-description {
+    clear: both;
+    float: left;
+    font-size: 13px;
+    line-height: 15px;
+    margin-bottom: 10px;
+    color: $gray;
+}
+
 .add-project {
     margin: 20px auto;
     width: 100%;
@@ -13,15 +22,22 @@
     padding-bottom: 20px;
 }
 
-.add-project-title-input {
+.add-project-input {
     float: left;
     clear: both;
     width: 100%;
     margin-bottom: 20px;
     padding: 10px;
     outline: none;
+    border: 1px solid $gray;
     box-sizing: border-box;
     box-shadow: none;
+    resize: none;
+}
+
+.add-project-commands {
+    height: 150px;
+    font-family: Courier;
 }
 
 .add-project-save {
